add repo to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "callbag-from-iter",
   "version": "1.0.0",
   "description": "Convert an iterable or iterator to a callbag pullable source",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/staltz/callbag-from-iter.git"
+  },
   "main": "index.js",
   "scripts": {
     "test": "tape test.js"
